# 3D_object_viewer

./: .gitignore  CMakeLists.txt  Makefile  README.md  main.c
srcs/: main.c  scop.h  scop_struct.h  types.h
srcs/buffers/: buffers.c  buffers.h
srcs/calculations/: calc_center_offset.c  calc_matrices.c  calculations.c  calculations.h  rotationOffset.c
srcs/display/: display.c  display.h
srcs/events/: callbacks.c  events.h  events_private.h  key_actions.c  terminal.c
srcs/initialization/: init_matrices.c  init_scop.c  init_system.c  init_view.c  initialization.c  initialization.h  initialization_private.h
srcs/parsing/: bmp_load.c  bmp_load.h  calc_center_offset.c  fill_output_buffers.c  fill_output_data.c  line_type_parsers.c  parseObj.c  parse_obj.c  parsing.h  parsingUtils.c  parsing_private.h  parsing_utils.c  saving_buffers.c
srcs/shaders/: fragmentShaders.h  scop.frag.shader  scop.vert.shader  shader_private.h  shaders.c  shaders.h  shaders_utils.c  vertexShaders.h
